--- a/index.html
+++ b/index.html
@@ -50,20 +50,7 @@
         <h1>TMDB Popular Movies</h1>
     </header>
 
-    <!-- Area Iklan Atas -->
-    <div class="ads" id="ad-top">
-        <!-- Masukkan Kode Iklan Adsterra di sini -->
-        <script async src="https://your-adsterra-script.js"></script>
-    </div>
-
-    <div class="container" id="movies-container">
-        <!-- Movies will be dynamically added here -->
-    </div>
-
-    <!-- Area Iklan Bawah -->
-    <div class="ads" id="ad-bottom">
-        <!-- Masukkan Kode Iklan Adsterra di sini -->
-        <script async src="<script type="text/javascript">
+<script type="text/javascript">
 	atOptions = {
 		'key' : '26ab5f7e2864a41f249fc7e5a2522d5d',
 		'format' : 'iframe',
@@ -72,8 +59,22 @@
 		'params' : {}
 	};
 </script>
-<script type="text/javascript" src="//fryboldlymalice.com/26ab5f7e2864a41f249fc7e5a2522d5d/invoke.js"></script>"></script>
+<script type="text/javascript" src="//fryboldlymalice.com/26ab5f7e2864a41f249fc7e5a2522d5d/invoke.js"></script>
+
+    <div class="container" id="movies-container">
+        <!-- Movies will be dynamically added here -->
     </div>
+
+<script type="text/javascript">
+	atOptions = {
+		'key' : '26ab5f7e2864a41f249fc7e5a2522d5d',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//fryboldlymalice.com/26ab5f7e2864a41f249fc7e5a2522d5d/invoke.js"></script>
 
     <script>
         const API_KEY = '3f45488e50ce5ef5a25ed21f1fcd98f3'; // Ganti dengan API Key TMDB Anda
