--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TMDB Movies</title>
+    <title>TMDB Popular Movies</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -55,7 +55,6 @@
         const IMAGE_URL = 'https://image.tmdb.org/t/p/w500';
         const container = document.getElementById('movies-container');
 
-        // Fungsi untuk mendapatkan daftar film populer
         async function getPopularMovies() {
             try {
                 const response = await fetch(${BASE_URL}/movie/popular?api_key=${API_KEY}&language=en-US&page=1);
@@ -63,15 +62,13 @@
                     throw new Error(HTTP error! status: ${response.status});
                 }
                 const data = await response.json();
-                console.log(data); // Debug: Cek apakah data diterima
                 displayMovies(data.results);
             } catch (error) {
                 console.error('Error fetching movies:', error);
-                container.innerHTML = <p style="color: red;">Failed to load movies. Check your API key or network connection.</p>;
+                container.innerHTML = <p style="color: red;">Failed to load movies. Please check your API Key or network connection.</p>;
             }
         }
 
-        // Fungsi untuk menampilkan film ke dalam HTML
         function displayMovies(movies) {
             container.innerHTML = '';
             movies.forEach(movie => {
@@ -86,7 +83,6 @@
             });
         }
 
-        // Panggil fungsi untuk mendapatkan film populer
         getPopularMovies();
     </script>
 </body>
