--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Movies 2025</title>
+    <title>Movies API with TMDB</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -49,6 +49,7 @@
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             overflow: hidden;
             text-align: center;
+            cursor: pointer;
         }
         .movie img {
             width: 100%;
@@ -71,6 +72,49 @@
             text-align: center;
             margin: 2rem 0;
         }
+        #modal {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.8);
+            color: white;
+            justify-content: center;
+            align-items: center;
+            overflow: auto;
+            z-index: 1000;
+        }
+        #modal-content {
+            background: #222;
+            padding: 2rem;
+            border-radius: 8px;
+            max-width: 600px;
+            width: 90%;
+        }
+        #modal img {
+            width: 100%;
+            border-radius: 8px;
+        }
+        #modal h2 {
+            margin: 1rem 0;
+        }
+        #modal p {
+            margin: 0.5rem 0;
+        }
+        #modal button {
+            margin-top: 1rem;
+            padding: 0.5rem 1rem;
+            background-color: #e50914;
+            color: white;
+            border: none;
+            cursor: pointer;
+            border-radius: 4px;
+        }
+        #modal button:hover {
+            background-color: #f30c1d;
+        }
     </style>
 </head>
 <body>
@@ -89,6 +133,17 @@
         <!-- Movies will be displayed here -->
     </div>
 
+    <div id="modal">
+        <div id="modal-content">
+            <button onclick="closeModal()">Close</button>
+            <img id="modal-img" src="" alt="Movie Poster">
+            <h2 id="modal-title"></h2>
+            <p id="modal-overview"></p>
+            <p id="modal-release-date"></p>
+            <iframe id="modal-trailer" width="100%" height="315" frameborder="0" allowfullscreen></iframe>
+        </div>
+    </div>
+
     <script>
         const API_KEY = '3f45488e50ce5ef5a25ed21f1fcd98f3'; // Ganti dengan API key TMDB Anda
         const BASE_URL = 'https://api.themoviedb.org/3';
@@ -104,17 +159,44 @@
             }
         }
 
+        async function fetchMovieDetails(movieId) {
+            try {
+                const response = await fetch(`${BASE_URL}/movie/${movieId}?api_key=${API_KEY}&append_to_response=videos`);
+                const movie = await response.json();
+                openModal(movie);
+            } catch (error) {
+                console.error('Error fetching movie details:', error);
+            }
+        }
+
         function displayMovies(movies) {
             const moviesContainer = document.getElementById('movies-container');
             moviesContainer.innerHTML = movies.map(movie => `
-                <div class="movie">
+                <div class="movie" onclick="fetchMovieDetails(${movie.id})">
                     <img src="${IMG_URL + movie.poster_path}" alt="${movie.title}">
                     <h3>${movie.title}</h3>
                     <p class="release-date">Release Date: ${movie.release_date}</p>
-                    <p>${movie.overview || 'No synopsis available.'}</p>
                     <p>Rating: ${movie.vote_average}</p>
                 </div>
             `).join('');
+        }
+
+        function openModal(movie) {
+            document.getElementById('modal-img').src = IMG_URL + movie.poster_path;
+            document.getElementById('modal-title').textContent = movie.title;
+            document.getElementById('modal-overview').textContent = movie.overview || 'No synopsis available.';
+            document.getElementById('modal-release-date').textContent = `Release Date: ${movie.release_date}`;
+
+            const trailer = movie.videos.results.find(video => video.type === 'Trailer');
+            document.getElementById('modal-trailer').src = trailer ? `https://www.youtube.com/embed/${trailer.key}` : '';
+            document.getElementById('modal-trailer').style.display = trailer ? 'block' : 'none';
+
+            document.getElementById('modal').style.display = 'flex';
+        }
+
+        function closeModal() {
+            document.getElementById('modal').style.display = 'none';
+            document.getElementById('modal-trailer').src = '';
         }
 
         function searchMovies() {
