--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
             border-radius: 8px;
             max-width: 600px;
             width: 90%;
+            position: relative;
         }
         #modal img {
             width: 100%;
@@ -114,6 +115,17 @@
         }
         #modal button:hover {
             background-color: #f30c1d;
+        }
+        .ad-section {
+            margin-top: 1rem;
+            text-align: center;
+            background-color: #444;
+            padding: 1rem;
+            border-radius: 8px;
+        }
+        .ad-section p {
+            color: #ccc;
+            margin: 0;
         }
     </style>
 </head>
@@ -141,6 +153,11 @@
             <p id="modal-overview"></p>
             <p id="modal-release-date"></p>
             <iframe id="modal-trailer" width="100%" height="315" frameborder="0" allowfullscreen></iframe>
+            <div class="ad-section">
+                <!-- Adsterra ad placeholder inside modal -->
+                <p>Your Ad Here</p>
+            </div>
+            <button onclick="goBackToMovies()">Back to Movies</button>
         </div>
     </div>
 
@@ -197,6 +214,10 @@
         function closeModal() {
             document.getElementById('modal').style.display = 'none';
             document.getElementById('modal-trailer').src = '';
+        }
+
+        function goBackToMovies() {
+            closeModal();
         }
 
         function searchMovies() {
