--- a/index.html
+++ b/index.html
@@ -144,7 +144,16 @@
     </div>
     <div class="ad-container">
         <!-- Adsterra ad placeholder -->
-        <p>Your Ad Here</p>
+        <p><script type="text/javascript">
+	atOptions = {
+		'key' : '26ab5f7e2864a41f249fc7e5a2522d5d',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//fryboldlymalice.com/26ab5f7e2864a41f249fc7e5a2522d5d/invoke.js"></script></p>
     </div>
     <div class="container" id="movies-container">
         <!-- Movies will be displayed here -->
@@ -158,10 +167,19 @@
             <p class="genres" id="modal-genres"></p>
             <p id="modal-overview"></p>
             <p id="modal-release-date"></p>
-            <iframe id="modal-trailer" width="100%" height="315" frameborder="0" allowfullscreen></iframe>
+			<iframe id="modal-trailer" width="100%" height="500" frameborder="0" allowfullscreen></iframe>
             <div class="ad-section">
                 <!-- Adsterra ad placeholder inside modal -->
-                <p>Your Ad Here</p>
+                <p><script type="text/javascript">
+	atOptions = {
+		'key' : '26ab5f7e2864a41f249fc7e5a2522d5d',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//fryboldlymalice.com/26ab5f7e2864a41f249fc7e5a2522d5d/invoke.js"></script></p>
             </div>
             <button onclick="goBackToMovies()">Back to Movies</button>
         </div>
@@ -242,3 +260,13 @@
     </script>
 </body>
 </html>
+
+
+====
+
+#modal iframe {
+    width: 100%;
+    height: 60vh; /* 60% of the viewport height */
+    border-radius: 8px;
+}
+
