--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
             cursor: pointer;
         }
         .movie img {
-            width: 100%;
-            height: 100px;
+            width: 90%;
+            height: 150px;
             object-fit: cover;
         }
         .movie h3 {
@@ -143,17 +143,16 @@
         <button onclick="searchMovies()">Search</button>
     </div>
     <div class="ad-container">
-        <!-- Adsterra ad placeholder -->
-        <p><script type="text/javascript">
+        <script type="text/javascript">
 	atOptions = {
-		'key' : '26ab5f7e2864a41f249fc7e5a2522d5d',
+		'key' : 'ae1cc75fd56c237694d21a156d88c568',
 		'format' : 'iframe',
-		'height' : 50,
-		'width' : 320,
+		'height' : 90,
+		'width' : 728,
 		'params' : {}
 	};
 </script>
-<script type="text/javascript" src="//fryboldlymalice.com/26ab5f7e2864a41f249fc7e5a2522d5d/invoke.js"></script></p>
+<script type="text/javascript" src="//fryboldlymalice.com/ae1cc75fd56c237694d21a156d88c568/invoke.js"></script>
     </div>
     <div class="container" id="movies-container">
         <!-- Movies will be displayed here -->
@@ -169,8 +168,7 @@
             <p id="modal-release-date"></p>
 			<iframe id="modal-trailer" width="100%" height="560" frameborder="0" allowfullscreen></iframe>
             <div class="ad-section">
-                <!-- Adsterra ad placeholder inside modal -->
-                <p><script type="text/javascript">
+                <script type="text/javascript">
 	atOptions = {
 		'key' : 'ae1cc75fd56c237694d21a156d88c568',
 		'format' : 'iframe',
@@ -179,7 +177,7 @@
 		'params' : {}
 	};
 </script>
-<script type="text/javascript" src="//fryboldlymalice.com/ae1cc75fd56c237694d21a156d88c568/invoke.js"></script></p>
+<script type="text/javascript" src="//fryboldlymalice.com/ae1cc75fd56c237694d21a156d88c568/invoke.js"></script>
             </div>
             <button onclick="goBackToMovies()">Back to Movies</button>
         </div>
