--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Movies 2025</title>
+    <title>Where To Watch Popular Movies</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -52,8 +52,8 @@
             cursor: pointer;
         }
         .movie img {
-            width: 90%;
-            height: 150px;
+            width: 100%;
+            height: 160px;
             object-fit: cover;
         }
         .movie h3 {
@@ -143,7 +143,27 @@
         <button onclick="searchMovies()">Search</button>
     </div>
     <div class="ad-container">
-        <script type="text/javascript">
+        <style type="text/css">
+  .mobileShow {display: none;}
+
+  /* Smartphone Portrait and Landscape */
+  @media only screen
+    and (min-device-width : 320px)
+    and (max-device-width : 480px){ 
+      .mobileShow {display: inline;}
+  }
+  .mobileHide { display: inline; }
+
+  /* Smartphone Portrait and Landscape */
+  @media only screen
+    and (min-device-width : 320px)
+    and (max-device-width : 480px){
+     .mobileHide { display: none;}
+  }
+</style>
+
+     <div class="mobileShow">
+<center><script type="text/javascript">
 	atOptions = {
 		'key' : 'ae1cc75fd56c237694d21a156d88c568',
 		'format' : 'iframe',
@@ -152,7 +172,19 @@
 		'params' : {}
 	};
 </script>
-<script type="text/javascript" src="//fryboldlymalice.com/ae1cc75fd56c237694d21a156d88c568/invoke.js"></script>
+<script type="text/javascript" src="//fryboldlymalice.com/ae1cc75fd56c237694d21a156d88c568/invoke.js"></script></center></div>
+<div class="mobileHide"><center><script type="text/javascript">
+	atOptions = {
+		'key' : 'ae1cc75fd56c237694d21a156d88c568',
+		'format' : 'iframe',
+		'height' : 90,
+		'width' : 728,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//fryboldlymalice.com/ae1cc75fd56c237694d21a156d88c568/invoke.js"></script></center></div>
+
+<script type='text/javascript' src='//fryboldlymalice.com/04/a8/e7/04a8e72e519ef1af64c4bed16f6c43ed.js'></script>
     </div>
     <div class="container" id="movies-container">
         <!-- Movies will be displayed here -->
@@ -168,7 +200,27 @@
             <p id="modal-release-date"></p>
 			<iframe id="modal-trailer" width="100%" height="560" frameborder="0" allowfullscreen></iframe>
             <div class="ad-section">
-                <script type="text/javascript">
+                <style type="text/css">
+  .mobileShow {display: none;}
+
+  /* Smartphone Portrait and Landscape */
+  @media only screen
+    and (min-device-width : 320px)
+    and (max-device-width : 480px){ 
+      .mobileShow {display: inline;}
+  }
+  .mobileHide { display: inline; }
+
+  /* Smartphone Portrait and Landscape */
+  @media only screen
+    and (min-device-width : 320px)
+    and (max-device-width : 480px){
+     .mobileHide { display: none;}
+  }
+</style>
+
+     <div class="mobileShow">
+<center><script type="text/javascript">
 	atOptions = {
 		'key' : 'ae1cc75fd56c237694d21a156d88c568',
 		'format' : 'iframe',
@@ -177,7 +229,17 @@
 		'params' : {}
 	};
 </script>
-<script type="text/javascript" src="//fryboldlymalice.com/ae1cc75fd56c237694d21a156d88c568/invoke.js"></script>
+<script type="text/javascript" src="//fryboldlymalice.com/ae1cc75fd56c237694d21a156d88c568/invoke.js"></script></center></div>
+<div class="mobileHide"><center><script type="text/javascript">
+	atOptions = {
+		'key' : 'ae1cc75fd56c237694d21a156d88c568',
+		'format' : 'iframe',
+		'height' : 90,
+		'width' : 728,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//fryboldlymalice.com/ae1cc75fd56c237694d21a156d88c568/invoke.js"></script></center></div>
             </div>
             <button onclick="goBackToMovies()">Back to Movies</button>
         </div>
