--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
             cursor: pointer;
         }
         .movie img {
-            width: 100%;
-            height: 160px;
+            width: 200%;
+            height: 100px;
             object-fit: cover;
         }
         .movie h3 {
@@ -143,48 +143,18 @@
         <button onclick="searchMovies()">Search</button>
     </div>
     <div class="ad-container">
-        <style type="text/css">
-  .mobileShow {display: none;}
 
-  /* Smartphone Portrait and Landscape */
-  @media only screen
-    and (min-device-width : 320px)
-    and (max-device-width : 480px){ 
-      .mobileShow {display: inline;}
-  }
-  .mobileHide { display: inline; }
-
-  /* Smartphone Portrait and Landscape */
-  @media only screen
-    and (min-device-width : 320px)
-    and (max-device-width : 480px){
-     .mobileHide { display: none;}
-  }
-</style>
-
-     <div class="mobileShow">
-<center><script type="text/javascript">
+<script type="text/javascript">
 	atOptions = {
-		'key' : 'ae1cc75fd56c237694d21a156d88c568',
+		'key' : '26ab5f7e2864a41f249fc7e5a2522d5d',
 		'format' : 'iframe',
-		'height' : 90,
-		'width' : 728,
+		'height' : 50,
+		'width' : 320,
 		'params' : {}
 	};
 </script>
-<script type="text/javascript" src="//fryboldlymalice.com/ae1cc75fd56c237694d21a156d88c568/invoke.js"></script></center></div>
-<div class="mobileHide"><center><script type="text/javascript">
-	atOptions = {
-		'key' : 'ae1cc75fd56c237694d21a156d88c568',
-		'format' : 'iframe',
-		'height' : 90,
-		'width' : 728,
-		'params' : {}
-	};
-</script>
-<script type="text/javascript" src="//fryboldlymalice.com/ae1cc75fd56c237694d21a156d88c568/invoke.js"></script></center></div>
-
-<script type='text/javascript' src='//fryboldlymalice.com/04/a8/e7/04a8e72e519ef1af64c4bed16f6c43ed.js'></script>
+<script type="text/javascript" src="//fryboldlymalice.com/26ab5f7e2864a41f249fc7e5a2522d5d/invoke.js"></script>
+	
     </div>
     <div class="container" id="movies-container">
         <!-- Movies will be displayed here -->
@@ -200,46 +170,18 @@
             <p id="modal-release-date"></p>
 			<iframe id="modal-trailer" width="100%" height="560" frameborder="0" allowfullscreen></iframe>
             <div class="ad-section">
-                <style type="text/css">
-  .mobileShow {display: none;}
-
-  /* Smartphone Portrait and Landscape */
-  @media only screen
-    and (min-device-width : 320px)
-    and (max-device-width : 480px){ 
-      .mobileShow {display: inline;}
-  }
-  .mobileHide { display: inline; }
-
-  /* Smartphone Portrait and Landscape */
-  @media only screen
-    and (min-device-width : 320px)
-    and (max-device-width : 480px){
-     .mobileHide { display: none;}
-  }
-</style>
-
-     <div class="mobileShow">
-<center><script type="text/javascript">
+			
+<script type="text/javascript">
 	atOptions = {
-		'key' : 'ae1cc75fd56c237694d21a156d88c568',
+		'key' : '26ab5f7e2864a41f249fc7e5a2522d5d',
 		'format' : 'iframe',
-		'height' : 90,
-		'width' : 728,
+		'height' : 50,
+		'width' : 320,
 		'params' : {}
 	};
 </script>
-<script type="text/javascript" src="//fryboldlymalice.com/ae1cc75fd56c237694d21a156d88c568/invoke.js"></script></center></div>
-<div class="mobileHide"><center><script type="text/javascript">
-	atOptions = {
-		'key' : 'ae1cc75fd56c237694d21a156d88c568',
-		'format' : 'iframe',
-		'height' : 90,
-		'width' : 728,
-		'params' : {}
-	};
-</script>
-<script type="text/javascript" src="//fryboldlymalice.com/ae1cc75fd56c237694d21a156d88c568/invoke.js"></script></center></div>
+<script type="text/javascript" src="//fryboldlymalice.com/26ab5f7e2864a41f249fc7e5a2522d5d/invoke.js"></script>
+
             </div>
             <button onclick="goBackToMovies()">Back to Movies</button>
         </div>
