--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
             cursor: pointer;
         }
         .movie img {
-            width: 200%;
-            height: 100px;
+            width: 100%;
+            height: 200px;
             object-fit: cover;
         }
         .movie h3 {
@@ -143,7 +143,6 @@
         <button onclick="searchMovies()">Search</button>
     </div>
     <div class="ad-container">
-
 <script type="text/javascript">
 	atOptions = {
 		'key' : '26ab5f7e2864a41f249fc7e5a2522d5d',
@@ -154,7 +153,6 @@
 	};
 </script>
 <script type="text/javascript" src="//fryboldlymalice.com/26ab5f7e2864a41f249fc7e5a2522d5d/invoke.js"></script>
-	
     </div>
     <div class="container" id="movies-container">
         <!-- Movies will be displayed here -->
@@ -169,8 +167,7 @@
             <p id="modal-overview"></p>
             <p id="modal-release-date"></p>
 			<iframe id="modal-trailer" width="100%" height="560" frameborder="0" allowfullscreen></iframe>
-            <div class="ad-section">
-			
+    <div class="ad-container">
 <script type="text/javascript">
 	atOptions = {
 		'key' : '26ab5f7e2864a41f249fc7e5a2522d5d',
@@ -181,6 +178,8 @@
 	};
 </script>
 <script type="text/javascript" src="//fryboldlymalice.com/26ab5f7e2864a41f249fc7e5a2522d5d/invoke.js"></script>
+
+<script type='text/javascript' src='//fryboldlymalice.com/04/a8/e7/04a8e72e519ef1af64c4bed16f6c43ed.js'></script>
 
             </div>
             <button onclick="goBackToMovies()">Back to Movies</button>
