--- a/index.html
+++ b/index.html
@@ -161,12 +161,12 @@
     <div id="modal">
         <div id="modal-content">
             <button onclick="closeModal()">Close</button>
-            <img id="modal-img" src="" alt="Movie Poster">
+            <img id="modal-img" src="" alt="Movie backdrops">
             <h2 id="modal-title"></h2>
             <p class="genres" id="modal-genres"></p>
             <p id="modal-overview"></p>
             <p id="modal-release-date"></p>
-			<iframe id="modal-trailer" width="100%" height="560" frameborder="0" allowfullscreen></iframe>
+			<iframe id="modal-trailer" width="100%" height="540" frameborder="0" allowfullscreen></iframe>
     <div class="ad-container">
 <script type="text/javascript">
 	atOptions = {
