--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Where To Watch Popular Movies</title>
+    <title>Explore Popular Movies</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -57,7 +57,7 @@
             object-fit: cover;
         }
         .movie h3 {
-            font-size: 1.2rem;
+            font-size: 1rem;
             margin: 0.5rem;
         }
         .movie p {
@@ -67,10 +67,6 @@
         .movie .release-date {
             font-size: 0.9rem;
             color: #777;
-        }
-        .ad-container {
-            text-align: center;
-            margin: 2rem 0;
         }
         #modal {
             display: none;
@@ -109,6 +105,13 @@
             color: #aaa;
             margin-bottom: 1rem;
         }
+        #modal iframe {
+            width: 100%;
+            max-width: 100%;
+            aspect-ratio: 16/9;
+            border: none;
+            border-radius: 8px;
+        }
         #modal button {
             margin-top: 1rem;
             padding: 0.5rem 1rem;
@@ -121,28 +124,12 @@
         #modal button:hover {
             background-color: #f30c1d;
         }
-        .ad-section {
-            margin-top: 1rem;
-            text-align: center;
-            background-color: #444;
-            padding: 1rem;
-            border-radius: 8px;
-        }
-        .ad-section p {
-            color: #ccc;
-            margin: 0;
-        }
     </style>
 </head>
 <body>
     <header>
-        <h1>Movies Explorer</h1>
-    </header>
-    <div class="search-container">
-        <input type="text" id="search-input" placeholder="Search for a movie...">
-        <button onclick="searchMovies()">Search</button>
-    </div>
-    <div class="ad-container">
+        <h1>Explore Popular Movies</h1>
+		
 <script type="text/javascript">
 	atOptions = {
 		'key' : '26ab5f7e2864a41f249fc7e5a2522d5d',
@@ -153,6 +140,12 @@
 	};
 </script>
 <script type="text/javascript" src="//fryboldlymalice.com/26ab5f7e2864a41f249fc7e5a2522d5d/invoke.js"></script>
+<script type='text/javascript' src='//fryboldlymalice.com/04/a8/e7/04a8e72e519ef1af64c4bed16f6c43ed.js'></script>
+
+    </header>
+    <div class="search-container">
+        <input type="text" id="search-input" placeholder="Search for a movie...">
+        <button onclick="searchMovies()">Search</button>
     </div>
     <div class="container" id="movies-container">
         <!-- Movies will be displayed here -->
@@ -161,13 +154,15 @@
     <div id="modal">
         <div id="modal-content">
             <button onclick="closeModal()">Close</button>
-            <img id="modal-img" src="" alt="Movie backdrops">
+            <img id="modal-img" src="" alt="Movie backdrop">
             <h2 id="modal-title"></h2>
             <p class="genres" id="modal-genres"></p>
             <p id="modal-overview"></p>
             <p id="modal-release-date"></p>
-			<iframe id="modal-trailer" width="100%" height="540" frameborder="0" allowfullscreen></iframe>
-    <div class="ad-container">
+            <iframe id="modal-trailer" allowfullscreen></iframe>
+        </div>
+    </div>
+
 <script type="text/javascript">
 	atOptions = {
 		'key' : '26ab5f7e2864a41f249fc7e5a2522d5d',
@@ -178,18 +173,12 @@
 	};
 </script>
 <script type="text/javascript" src="//fryboldlymalice.com/26ab5f7e2864a41f249fc7e5a2522d5d/invoke.js"></script>
-
-<script type='text/javascript' src='//fryboldlymalice.com/04/a8/e7/04a8e72e519ef1af64c4bed16f6c43ed.js'></script>
-
-            </div>
-            <button onclick="goBackToMovies()">Back to Movies</button>
-        </div>
-    </div>
-
+	
     <script>
-        const API_KEY = '3f45488e50ce5ef5a25ed21f1fcd98f3'; // Ganti dengan API key TMDB Anda
+        const API_KEY = '3f45488e50ce5ef5a25ed21f1fcd98f3'; // Replace with your TMDB API key
         const BASE_URL = 'https://api.themoviedb.org/3';
         const IMG_URL = 'https://image.tmdb.org/t/p/w500';
+        const BACKDROP_URL = 'https://image.tmdb.org/t/p/w1280';
 
         async function fetchMovies(url) {
             try {
@@ -216,7 +205,7 @@
             moviesContainer.innerHTML = movies.map(movie => `
                 <div class="movie" onclick="fetchMovieDetails(${movie.id})">
                     <img src="${IMG_URL + movie.poster_path}" alt="${movie.title}">
-                    <h3>${movie.title}</h3>
+                    <h3>${movie.title} (${new Date(movie.release_date).getFullYear()})</h3>
                     <p class="release-date">Release Date: ${movie.release_date}</p>
                     <p>Rating: ${movie.vote_average}</p>
                 </div>
@@ -224,7 +213,7 @@
         }
 
         function openModal(movie) {
-            document.getElementById('modal-img').src = IMG_URL + movie.poster_path;
+            document.getElementById('modal-img').src = BACKDROP_URL + movie.backdrop_path;
             document.getElementById('modal-title').textContent = movie.title;
             document.getElementById('modal-overview').textContent = movie.overview || 'No synopsis available.';
             document.getElementById('modal-release-date').textContent = `Release Date: ${movie.release_date}`;
@@ -242,10 +231,6 @@
         function closeModal() {
             document.getElementById('modal').style.display = 'none';
             document.getElementById('modal-trailer').src = '';
-        }
-
-        function goBackToMovies() {
-            closeModal();
         }
 
         function searchMovies() {
