--- a/index.html
+++ b/index.html
@@ -1,131 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Where To Watch Popular Movies 2025</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-        }
-        header {
-            background-color: #333;
-            color: white;
-            padding: 1rem 2rem;
-            text-align: center;
-        }
-        .search-container {
-            margin: 1rem auto;
-            text-align: center;
-        }
-        .search-container input {
-            padding: 0.5rem;
-            font-size: 1rem;
-            width: 300px;
-        }
-        .search-container button {
-            padding: 0.5rem 1rem;
-            font-size: 1rem;
-            background-color: #333;
-            color: white;
-            border: none;
-            cursor: pointer;
-        }
-        .search-container button:hover {
-            background-color: #555;
-        }
-        .container {
-            padding: 2rem;
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-            gap: 1.5rem;
-        }
-        .movie {
-            background-color: white;
-            border-radius: 8px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            overflow: hidden;
-            text-align: center;
-            cursor: pointer;
-        }
-        .movie img {
-            width: 100%;
-            height: 200px;
-            object-fit: cover;
-        }
-        .movie h3 {
-            font-size: 1rem;
-            margin: 0.5rem;
-        }
-        .movie p {
-            color: #555;
-            margin: 0.5rem;
-        }
-        .movie .release-date {
-            font-size: 0.9rem;
-            color: #777;
-        }
-        #modal {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(0, 0, 0, 0.9);
-            color: white;
-            justify-content: center;
-            align-items: center;
-            overflow: auto;
-            z-index: 1000;
-        }
-        #modal-content {
-            background: #222;
-            padding: 2rem;
-            border-radius: 8px;
-            max-width: 900px;
-            width: 90%;
-            position: relative;
-        }
-        #modal img {
-            width: 100%;
-            border-radius: 8px;
-        }
-        #modal h2 {
-            margin: 1rem 0;
-        }
-        #modal p {
-            margin: 0.5rem 0;
-        }
-        #modal .genres {
-            font-size: 0.9rem;
-            color: #aaa;
-            margin-bottom: 1rem;
-        }
-        #modal iframe {
-            width: 100%;
-            max-width: 100%;
-            aspect-ratio: 16/9;
-            border: none;
-            border-radius: 8px;
-        }
-        #modal button {
-            margin-top: 1rem;
-            padding: 0.5rem 1rem;
-            background-color: #e50914;
-            color: white;
-            border: none;
-            cursor: pointer;
-            border-radius: 4px;
-        }
-        #modal button:hover {
-            background-color: #f30c1d;
-        }
-    </style>
-</head>
 <body>
     <header>
         <h1>Explore Popular Movies</h1>
@@ -133,6 +5,18 @@
     <div class="search-container">
         <input type="text" id="search-input" placeholder="Search for a movie...">
         <button onclick="searchMovies()">Search</button>
+     <script type="text/javascript">
+	atOptions = {
+		'key' : '26ab5f7e2864a41f249fc7e5a2522d5d',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//fryboldlymalice.com/26ab5f7e2864a41f249fc7e5a2522d5d/invoke.js"></script>
+
+<script type='text/javascript' src='//fryboldlymalice.com/04/a8/e7/04a8e72e519ef1af64c4bed16f6c43ed.js'></script>
     </div>
     <div class="container" id="movies-container">
         <!-- Movies will be displayed here -->
@@ -147,6 +31,18 @@
             <p id="modal-overview"></p>
             <p id="modal-release-date"></p>
             <iframe id="modal-trailer" allowfullscreen></iframe>
+
+            <script type="text/javascript">
+	atOptions = {
+		'key' : '26ab5f7e2864a41f249fc7e5a2522d5d',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//fryboldlymalice.com/26ab5f7e2864a41f249fc7e5a2522d5d/invoke.js"></script>
+            <button onclick="goBackToMovies()">Go Back to Movies</button>
         </div>
     </div>
 
@@ -217,8 +113,12 @@
             }
         }
 
+        function goBackToMovies() {
+            closeModal();
+            document.getElementById('movies-container').scrollIntoView({ behavior: 'smooth' });
+        }
+
         // Fetch popular movies on page load
         fetchMovies(`${BASE_URL}/movie/popular?api_key=${API_KEY}&language=en-US&page=1`);
     </script>
 </body>
-</html>
