--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <body>
     <header>
-        <h1>Explore Popular Movies</h1>
+        <h1>Explore Popular 123Movies</h1>
     </header>
     <div class="search-container">
         <input type="text" id="search-input" placeholder="Search for a movie...">
