--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Where To Watch Popular Movies 2025</title>
+    <title>Where To Watch Popular Movies</title>
     <style>
-        /* Existing styles */
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -69,6 +68,10 @@
             font-size: 0.9rem;
             color: #777;
         }
+        .ad-container {
+            text-align: center;
+            margin: 2rem 0;
+        }
         #modal {
             display: none;
             position: fixed;
@@ -91,53 +94,88 @@
             width: 90%;
             position: relative;
         }
+        #modal img {
+            width: 100%;
+            border-radius: 8px;
+        }
         #modal h2 {
             margin: 1rem 0;
+        }
+        #modal p {
+            margin: 0.5rem 0;
         }
         #modal .genres {
             font-size: 0.9rem;
             color: #aaa;
             margin-bottom: 1rem;
         }
-        iframe {
-            width: 100%;
-            max-width: 900px;
-            height: 200px;
+        #modal button {
+            margin-top: 1rem;
+            padding: 0.5rem 1rem;
+            background-color: #e50914;
+            color: white;
             border: none;
-            aspect-ratio: 16/9;
+            cursor: pointer;
+            border-radius: 4px;
         }
-        iframe:fullscreen {
-            width: 100%;
-            height: 100%;
+        #modal button:hover {
+            background-color: #f30c1d;
+        }
+        .ad-section {
+            margin-top: 1rem;
+            text-align: center;
+            background-color: #444;
+            padding: 1rem;
+            border-radius: 8px;
+        }
+        .ad-section p {
+            color: #ccc;
+            margin: 0;
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>Movies Explorer 2025</h1>
+        <h1>Explore Popular Movies</h1>
     </header>
     <div class="search-container">
         <input type="text" id="search-input" placeholder="Search for a movie...">
         <button onclick="searchMovies()">Search</button>
+        <!-- Iklan Adsterra pada Home Page -->
+        <div id="adsterra-home" style="margin-top: 1rem;">
+            <script async src="//example.adsterra.com/script.js"></script>
+            <!-- Replace script src above with your Adsterra ad script -->
+        </div>
     </div>
     <div class="container" id="movies-container">
         <!-- Movies will be displayed here -->
     </div>
+
     <div id="modal">
         <div id="modal-content">
             <button onclick="closeModal()">Close</button>
-            <img id="modal-img" src="" alt="Movie Poster">
+            <img id="modal-img" src="" alt="Movie backdrop">
             <h2 id="modal-title"></h2>
             <p class="genres" id="modal-genres"></p>
             <p id="modal-overview"></p>
             <p id="modal-release-date"></p>
             <iframe id="modal-trailer" allowfullscreen></iframe>
+
+            <!-- Iklan Adsterra pada Sinopsis -->
+            <div id="adsterra-modal" style="margin-top: 1rem;">
+                <script async src="//example.adsterra.com/script.js"></script>
+                <!-- Replace script src above with your Adsterra ad script -->
+            </div>
+
+            <button onclick="goBackToMovies()">Go Back to Movies</button>
         </div>
     </div>
+
     <script>
-        const API_KEY = '3f45488e50ce5a25ed21f1fcd98f3';
+        const API_KEY = '3f45488e50ce5ef5a25ed21f1fcd98f3'; // Replace with your TMDB API key
         const BASE_URL = 'https://api.themoviedb.org/3';
         const IMG_URL = 'https://image.tmdb.org/t/p/w500';
+        const BACKDROP_URL = 'https://image.tmdb.org/t/p/w1280';
 
         async function fetchMovies(url) {
             try {
@@ -172,8 +210,8 @@
         }
 
         function openModal(movie) {
-            document.getElementById('modal-img').src = IMG_URL + movie.poster_path;
-            document.getElementById('modal-title').textContent = `${movie.title} (${new Date(movie.release_date).getFullYear()})`;
+            document.getElementById('modal-img').src = BACKDROP_URL + movie.backdrop_path;
+            document.getElementById('modal-title').textContent = movie.title;
             document.getElementById('modal-overview').textContent = movie.overview || 'No synopsis available.';
             document.getElementById('modal-release-date').textContent = `Release Date: ${movie.release_date}`;
 
@@ -200,7 +238,12 @@
             }
         }
 
+        function goBackToMovies() {
+            closeModal();
+            document.getElementById('movies-container').scrollIntoView({ behavior: 'smooth' });
+        }
+
+        // Fetch popular movies on page load
         fetchMovies(`${BASE_URL}/movie/popular?api_key=${API_KEY}&language=en-US&page=1`);
     </script>
 </body>
-</html>
