--- a/index.html
+++ b/index.html
@@ -155,11 +155,11 @@
         <div id="modal-content">
             <button onclick="closeModal()">Close</button>
             <img id="modal-img" src="" alt="Movie backdrop">
-            <h2 id="modal-title"></h2>
+            <h2 id="modal-title-release-date"></h2>
             <p class="genres" id="modal-genres"></p>
             <p id="modal-overview"></p>
             <p id="modal-release-date"></p>
-            <iframe id="modal-trailer" allowfullscreen></iframe>
+            <iframe id="modal-trailer" width="100%" height="530" frameborder="0" allowfullscreen></iframe>
 
             <!-- Iklan Adsterra pada Sinopsis -->
             <div id="adsterra-modal" style="margin-top: 1rem;">
